[package]
name = "potato_server"
version = "0.1.0"
edition = "2024"

[lib]
name = "potato_server"
crate-type = ["cdylib"]

[dependencies]
arma-rs = { version = "1.12.1", default-features = false, features = ["extension", "uuid", "chrono"]}
chrono = { version = "0.4.45", features = ["serde"] }
reqwest =  { version = "0.13.4", features = ["json", "blocking"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
url = "2.5.8"
uuid = { version = "1.23.4", features = ["v4", "serde"] }
